--- a/css/style.css
+++ b/css/style.css
@@ -305,9 +305,11 @@ li {
   text-transform: uppercase;
   font: 500 16px/40px "Poppins", sans-serif;
   padding: 0 35px;
-  border-radius: 30px;
+  margin-right: 10px;
+  border-radius: 0;
   color: #fff;
   border: none;
+
 }
 
 .btn-warning:hover, .btn-warning:focus {
@@ -317,9 +319,10 @@ li {
 
 .btn-warning.btn-lg {
   padding: 0 85px;
-  border-radius: 60px;
+  border-radius: 0;
   font: 500 27px/72px "Poppins", sans-serif;
   margin-bottom: 77px;
+    box-shadow: 10px 15px 15px rgba(0, 0, 0, .4);
 }
 
 @media (max-width: 991px) {
@@ -688,9 +691,15 @@ textarea.form-control {
 
 .section-header h2 {
   text-transform: uppercase;
-  font: 800 48px/1 "Poppins", sans-serif;
+  font: 800 90px/1 "Poppins", sans-serif;
   padding-top: 5px;
   margin: 0 0 25px;
+}
+@media (max-width: 1201px) {
+  .section-header h2 {
+    font-size: 60px;
+    //margin-bottom: 15px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -708,7 +717,7 @@ textarea.form-control {
 
 @media (max-width: 767px) {
   .section-header p {
-    max-width: 90%;
+    //max-width: 90%;
     font-size: 16px;
     line-height: 24px;
   }
@@ -830,6 +839,7 @@ textarea.form-control {
   padding-top: 90px;
   text-align: left;
   background-image: url("../images/crowd-bg.jpg") ;
+  background-size: cover;
 }
 
 @media (max-width: 991px) {
@@ -927,18 +937,26 @@ textarea.form-control {
   }
 }
 
-.top-banner .btn {
-  z-index: 2;
+.top-banner .banner-text {
+  z-index: 20;
 }
 .top-banner .apple-watch {
-
   margin: 0 auto 0px;
+  z-index:2;
 }
 
-@media (max-width: 767px) {
+.top-banner .apple-watch img {
+  margin-top: 100px;
+  height: 100%;
+
+}
+
+@media (max-width: 991px) {
   .top-banner .apple-watch img {
-    //margin-bottom: 0px;
-    max-width: 330px;
+    margin-top: -15%;
+    max-width: 80%;
+    height: auto;
+
   }
 }
 
@@ -2597,6 +2615,19 @@ header.video-bg {
   position: relative;
 }
 
+
+
+@media (min-width: 992px){
+.runner .runner-man{
+  position: absolute;
+  z-index: 3;
+  //background-color: rgba(255,0,0,0.5);
+}
+.runner .col-md-8{
+  padding-top: 80px;
+}
+}
+
 @media (max-width: 1199px) {
   .runner {
     padding-top: 0;//80px;
@@ -2605,7 +2636,7 @@ header.video-bg {
 
 @media (max-width: 767px) {
   .runner {
-    text-align: center;
+    text-align: left;
   }
 }
 
@@ -2638,9 +2669,12 @@ header.video-bg {
 .runner h2 {
   margin-top: 88px;
   margin-bottom: 20px;
-  color: white;
-  font: 800 50px/1 "Poppins", sans-serif;
+  color: white !important;
+  text-align: left;
+//  font: 800 50px/1 "Poppins", sans-serif;
 }
+
+
 
 @media (max-width: 991px) {
   .runner h2 {
@@ -2656,12 +2690,13 @@ header.video-bg {
   .runner h2 {
     margin: 10px 0;
     line-height: 1.3;
-    color:black;
+    color:black !important;
   }
 }
 
 .runner p {
-  font: 300 18px/32px "Poppins", sans-serif;
+  //font: 300 18px/32px "Poppins", sans-serif;
+  text-align: left;
   margin-bottom: 25px;
   opacity: 0.77;
 }
@@ -2728,25 +2763,25 @@ header.video-bg {
 .the-look {
   padding: 102px 0 334px;
   background: url(../images/Fanband_3_1_MANCITYBLUE.png) no-repeat scroll right bottom;
-  background-size: 90%;
-
+  background-size: auto 700px;
 }
-
-
+@media (max-width: 1200px) {
+  .the-look {
+    background-size: auto 600px;
+  }
+}
 .the-look-features {
   padding-top: 0px;
   text-align: left;
 }
 
+
 @media (max-width: 991px) {
-  .the-look-features {
-    float: left;
-  }
   .the-look {
     background-size: 100%;
     padding: 42px 0 384px;
+    background-size: auto 500px;
   }
-
 }
 
 
@@ -2755,9 +2790,9 @@ header.video-bg {
 
   }
   .the-look {
-    background-size: 100%;
-    padding: 42px 0 384px;
 
+    padding: 42px 0 384px;
+    background-size: contain;
   }
 }
 @media (max-width: 425px) {
@@ -2765,7 +2800,6 @@ header.video-bg {
 
   }
   .the-look {
-    background-size: 100%;
     padding: 42px 0 184px;
 
   }
