--- a/css/themes/blue-orange.css
+++ b/css/themes/blue-orange.css
@@ -121,7 +121,7 @@ header.alt-bg .navbar.is-scrolling .navbar-header .navbar-toggle span {
 }
 
 .top-banner h2 {
-  color: #374048;
+  color: #000;//#374048;
 }
 
 .top-banner p {
