--- a/css/style.css
+++ b/css/style.css
@@ -3079,6 +3079,10 @@ header.video-bg {
   border: none;
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
+  font-size: 19px;
+  color: #fff;
+
+
 }
 
 .newsletter-form .input-group-addon button {
