--- a/css/style.css
+++ b/css/style.css
@@ -3138,8 +3138,14 @@ header.video-bg {
   line-height: 58px;
   padding: 0 38px;
   border: 2px solid #000;
+}
 
+#js-clubsignup-btn {
+  box-shadow: 0 20px 40px rgba(0, 0, 0, .22);
+}
 
+#js-clubsignup-btn .active { //funkar inte
+  box-shadow: 0 4px 5px rgba(0, 0, 0, .42);
 }
 
 /*=========club-form==========*/
